--- a/parser/pom.xml
+++ b/parser/pom.xml
@@ -15,7 +15,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>net.rpgtoolkit.rpgcode</groupId>
-    <artifactId>parser</artifactId>
+    <artifactId>rpgcode-parser</artifactId>
     <version>4.0.0-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>RPG Toolkit 4.x RPGCode (Parser)</name>
@@ -24,9 +24,15 @@
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.resources.sourceEncoding>UTF-8</project.resources.sourceEncoding>
+        <blade.version>4.0.0-SNAPSHOT</blade.version>
     </properties>
     
     <dependencies>
+        <dependency>
+            <groupId>net.rpgtoolkit.blade</groupId>
+            <artifactId>blade-core</artifactId>
+            <version>${blade.version}</version>
+        </dependency>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
